force-app/main/default/objects/Fund_Expenditure__c/Fund_Expenditure__c.object-meta.xml
<CustomObject>
    <description>Record for the attribution of disbursements to specific funds. Creating these records draws revenue from the related fund. This object can be repurposed for other expendatures from Funds as well.</description>
    <label>Fund Expenditure</label>
    <nameField>
        <displayFormat>FE-{00000}</displayFormat>
        <label>Fund Expenditure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fund Expenditures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>