force-app/main/default/objects/Fund_Expenditure__c/fields/Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Disbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship to the Disbursement being paid.</description>
    <label>Disbursement</label>
    <referenceTo>outfunds__Disbursement__c</referenceTo>
    <relationshipLabel>Fund Expenditures</relationshipLabel>
    <relationshipName>Fund_Expenditures</relationshipName>
    <type>Lookup</type>
</CustomField>