force-app/main/default/objects/Fund_Expenditure__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship to the fund being disbursed.</description>
    <label>Fund</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Fund Expenditures</relationshipLabel>
    <relationshipName>Fund_Expenditures</relationshipName>
    <type>Lookup</type>
</CustomField>